tests/ui/associated-types/issue-26681.stderr
error[E0308]: mismatched types
  --> $DIR/issue-26681.rs:17:39
   |
LL |     type Fv: Foo = u8;
   |     ------------ associated type defaults can't be assumed inside the trait defining them
LL |     const C: <Self::Fv as Foo>::Bar = 6665;
   |                                       ^^^^ expected associated type, found integer
   |
   = note: expected associated type `<<Self as Baz>::Fv as Foo>::Bar`
                         found type `{integer}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
